tests/baselines/reference/sourceMapValidationClass(target=es2015).errors.txt
sourceMapValidationClass.ts(7,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== sourceMapValidationClass.ts (1 errors) ====
    class Greeter {
        constructor(public greeting: string, ...b: string[]) {
        }
        greet() {
            return "<h1>" + this.greeting + "</h1>";
        }
        private x: string;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        private x1: number = 10;
        private fn() {
            return this.greeting;
        }
        get greetings() {
            return this.greeting;
        }
        set greetings(greetings: string) {
            this.greeting = greetings;
        }
    }